Change the name of the screech owl

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>Snowy owl</li>
         <li>Great grey owl</li>
         <li>Great horned owl</li>
-        <li>Western screen owl</li>
+        <li>Western screech owl</li>
       </ul>
     </li>
     <li><strong>Herons</strong>
